--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -20,7 +20,7 @@
       <div class="nav-item"><a href="">CONTACT</a></div>
     </div>
     <div class="content-area">
-      <!-- Add your content here: text, images, etc. -->
+      <!-- Add your content here: text, images, etc. -->hii
     </div>
   </div>
   <script src="script.js" defer></script>
