--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -6,6 +6,7 @@
   <title>Portfolio</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="mobile.css" />
 </head>
 <body>
   <header>
