--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>BULBSOL</h1>
+    <h1>BULBSOL.</h1>
     <!-- round button positioned to the right; accessible label provided -->
     <button class="header-btn" aria-label="Open menu">+</button>
   </header>
