--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -11,19 +11,23 @@
 <body>
   <header>
     <h1>BULBSOL.</h1>
-    <!-- round button positioned to the right; accessible label provided -->
     <button class="header-btn" aria-label="Open menu">+</button>
   </header>
-  <div class="content-wrapper">
-    <div class="nav-column">
-      <div class="nav-item"><a href="">ABOUT</a></div>
-      <div class="nav-item"><a href="">OUR EXPERIENCE</a></div>
-      <div class="nav-item"><a href="">CONTACT</a></div>
+  <section class="hero-section">
+    <div class="content-wrapper">
+      <div class="nav-column">
+        <div class="nav-item"><a href="">ABOUT</a></div>
+        <div class="nav-item"><a href="">OUR EXPERIENCE</a></div>
+        <div class="nav-item"><a href="">CONTACT</a></div>
+      </div>
+      <div class="content-area">
+        <div class="content-section">
+          <h2>Clean - Responsive - Websites</h2>
+          <p>elegant high quality fast websites at your service, we provide businesses the push they need to reach customers along with valuable data that ensures business growth and scale</p>
+        </div>
+      </div>
     </div>
-    <div class="content-area">
-      <!-- Add your content here: text, images, etc. -->hii
-    </div>
-  </div>
+  </section>
   <script src="script.js" defer></script>
 </body>
 </html>
