--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -28,6 +28,11 @@
       </div>
     </div>
   </section>
+  <section>1</section>
+  <section>2</section>
+  <section>3</section>
+  <section>4</section>
+  <section>5</section>
   <script src="script.js" defer></script>
 </body>
 </html>
