--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="mobile.css" />
+  <link rel="stylesheet" href="hamza.css" />
 </head>
 <body>
   <header>
@@ -28,7 +29,11 @@
       </div>
     </div>
   </section>
-  <section>1</section>
+  <section class="section-one">
+    <div class="about-team">About team</div>
+    <div class="section-one-text">We’re on a mission to build meaningful software that solves real problems, serves communities, and makes life simpler for everyone.</div>
+    <img src="path/to/your-image.jpg" alt="Descriptive text" class="bottom-left-image" />
+  </section>
   <section>2</section>
   <section>3</section>
   <section>4</section>
