--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -33,7 +33,19 @@
   <section class="section-fullscreen">
     <div class="about-team">About team</div>
     <div class="section-one-text">We’re on a mission to build meaningful software that solves real problems, serves communities, and makes life simpler for everyone.</div>
-    <img src="path/to/your-image.jpg" alt="Descriptive text" class="bottom-left-image" />
+    <div class="new-div">At BulbSol, we are a team of co-founders from diverse professional backgrounds, each bringing unique expertise to the table. This diversity allows us to approach challenges from multiple perspectives and combine our strengths to create innovative, high-quality software solutions. By blending creativity, technical skill, and strategic thinking, we strive to develop products that not only meet our clients’ needs but also make a meaningful impact. Together, we turn ideas into practical, reliable, and standout solutions.</div>
+    <img src="logo.jpg" alt="Logo" class="bottom-left-image" />
+    <div class="stats-container">
+      <div class="stat-block">
+        <div class="stat-number">3+</div>
+        <div class="stat-label">years<br>experience</div>
+      </div>
+      <div class="stat-divider"></div>
+      <div class="stat-block">
+        <div class="stat-number">100+</div>
+        <div class="stat-label">projects<br>delivered</div>
+      </div>
+    </div>
   </section>
   <section class="section-fullscreen" style="background-color: antiquewhite;" id="about">1</section>
   <section class="section-fullscreen" style="background-color: blue;" id="experience">2</section>
